kubernetes/base/infrastructure/platform-network-interface/resources/ccnp-pni-redis-operator-dataplane-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: pni-redis-operator-dataplane-egress
  labels:
    app.kubernetes.io/name: platform-network-interface
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: redis-system
      name: redis-operator
  egress:
    # Managed Redis replication and Sentinel pods
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: redis
            redis_setup_type: replication
        - matchLabels:
            app.kubernetes.io/name: redis-sentinel
            redis_setup_type: sentinel
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
            - port: "26379"
              protocol: TCP
